<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CompleteProfileFragment"
    android:background="#E6E7E8">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="271dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/completa_datos"
        android:textColor="@color/tipografia"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/primer_nombre"
            android:inputType="textPersonName"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/segundo_nombre"
            android:inputType="textPersonName"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/apellido_paterno"
            android:inputType="textPersonName"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/apellido_materno"
            android:inputType="textPersonName"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/tipo_doc"
        android:textColor="@color/tipografia"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22" />

    <LinearLayout
        android:id="@+id/linearLayout23"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <Spinner
            android:id="@+id/spinnerTipDoc"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextNumber8"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/numero_doc"
            android:inputType="number"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnContinuar"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_rounded"
        android:gravity="center"
        android:text="@string/continuar"
        android:textColor="@color/tipografia_boton_login"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout23" />

</androidx.constraintlayout.widget.ConstraintLayout>